# poultry

./: CHANGELOG.md  README.md  poultry.cabal
src/: Comb.hs  Gender.hs  Genetics.hs  Lib.hs
test/: CombSpec.hs  GenderSpec.hs
